--- a/src/main/resources/templates/fragments/headFragment.html
+++ b/src/main/resources/templates/fragments/headFragment.html
@@ -21,3 +21,7 @@
     <!-- jQuery  -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
+    <!--pageNeed-->
+    <script src="../assets/js/pageNeed.js"></script>
+
+
