--- a/src/main/resources/templates/purchaseorder/purchaseOrderList.html
+++ b/src/main/resources/templates/purchaseorder/purchaseOrderList.html
@@ -136,11 +136,18 @@
     </main>
     <!-- End #main -->
     <script th:inline="javascript">
+        var totalPage = 0;
+        var currentPage = 1;
         $(document).ready(function (e) {
+            // 전역 변수 선언
             console.log("자바스크립트작동")
             function getPurchaseOrderContent(page) {
                 return $.getJSON(`/purchaseordercontent/allList?page=${page}&size=10`, function(data) {
                     console.log("요청", data);
+                    // 첫 번째 요청에서 totalPage 값 설정
+                    if (totalPage === 0) {
+                        totalPage = data.totalPage;
+                    }
                     var str = "";
                     $.each(data.dtoList, function(idx, dto) {
                         str += '<tr>';
@@ -158,7 +165,6 @@
                     $("#purchaseOrderList").append(str); // 데이터를 덮어쓰지 않고 추가
                 });
             }
-
             getPurchaseOrderContent(1);
             setupInfiniteScroll(getPurchaseOrderContent);
         })
