--- a/src/main/resources/templates/Notice/noticeread.html
+++ b/src/main/resources/templates/Notice/noticeread.html
@@ -99,7 +99,7 @@
 
             <div class="row mb-12">
                 <div class="col-sm-10">
-                    <a href=noticemodify.html"><button type="button" class="btn btn-primary">수정</button></a>
+                    <a href="noticemodify"><button type="button" class="btn btn-primary">수정</button></a>
                     <a href="">  <button type="button" class="btn btn-danger">삭제</button></a>
                     <a href="공지사항.html"><button type="button" class="btn btn-primary">조회</button></a>
                 </div>
