--- a/src/main/resources/templates/fragments/bodyFragment.html
+++ b/src/main/resources/templates/fragments/bodyFragment.html
@@ -213,7 +213,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link collapsed" href="공지사항.html">
+                    <a class="nav-link collapsed" href="noticelist">
                         <i class="bi bi-bell-fill"></i>
                         <span>공지사항</span>
                     </a>
