--- a/src/main/resources/templates/Notice/noticemodify.html
+++ b/src/main/resources/templates/Notice/noticemodify.html
@@ -72,7 +72,7 @@
                                     <!-- End Quill Editor Full -->
 
                                 </div>
-                    </div>
+                            </form></form></div>
 
                 </div>
 
@@ -104,7 +104,7 @@
                 <div class="row mb-12">
                     <div class="col-sm-10">
                         <a href="공지사항1더미.html"><button type="button" class="btn btn-primary">완료</button></a>
-                        <a href="">  <button type="button" class="btn btn-danger">삭제</button></a>
+                        <a href=""><button type="button" class="btn btn-danger">삭제</button></a>
                         <a href="공지사항.html"><button type="button" class="btn btn-primary">조회</button></a>
                     </div>
                 </div>
