--- a/src/main/resources/templates/Notice/noticeread.html
+++ b/src/main/resources/templates/Notice/noticeread.html
@@ -55,7 +55,7 @@
                                 <div class="row mb-3">
                                     <label class="col-sm-2 col-form-label">제목</label>
                                     <div class="col-sm-10">
-                                        <label class="col-sm-2 col-form-label">※ 여름휴가공지 ※</label>
+                                        <label class="col-sm-2 col-form-label" th:text="{noticeDTO.noticeTitle}"></label>
                                     </div>
                                 </div>
                                 <div class="row mb-3">
