--- a/src/main/resources/templates/Notice/noticeregister.html
+++ b/src/main/resources/templates/Notice/noticeregister.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -21,7 +21,6 @@
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="index.html">메인</a></li>
                 <li class="breadcrumb-item">공지사항</li>
-                <li class="breadcrumb-item">※ 여름휴가공지 ※</li>
             </ol>
         </nav>
     </div><!-- End Page Title -->
@@ -41,81 +40,76 @@
                             <div class="row mb-3">
                                 <label class="col-sm-2 col-form-label">번호</label>
                                 <div class="col-sm-10">
-                                    <label class="col-sm-2 col-form-label">1</label>
+                                    <label class="col-sm-2 col-form-label">${notice.noticeNumber}</label>
                                 </div>
                             </div>
                             <form>
                                 <div class="row mb-3">
                                     <label class="col-sm-2 col-form-label">작성자</label>
                                     <div class="col-sm-10">
-                                        <label class="col-sm-2 col-form-label">관리자</label>
+                                        <input type="text" class="form-control" value="${notice.noticeWriter}">
                                     </div>
                                 </div>
 
                                 <div class="row mb-3">
                                     <label class="col-sm-2 col-form-label">제목</label>
                                     <div class="col-sm-10">
-                                        <label class="col-sm-2 col-form-label" th:text="{noticeDTO.noticeTitle}"></label>
+                                        <input type="text" class="form-control" value="${notice.noticeTitle}">
                                     </div>
                                 </div>
                                 <div class="row mb-3">
                                     <label class="col-sm-2 col-form-label">작성일</label>
                                     <div class="col-sm-10">
-                                        <label class="col-sm-2 col-form-label">2024-07-22</label>
+                                        <input type="date" class="form-control" value="2024-05-30">
                                     </div>
                                 </div>
 
 
+                                <div class="row mb-3">
+                                    <label class="col-sm-2 col-form-label">본문 내용</label>
+                                    <!-- End Quill Editor Full -->
 
-                                <!-- End Quill Editor Full -->
+                                </div>
+                            </form>
+                                </form
+                                    ></div>>
 
+                </div>
+
+                <div class="col-lg-12">
+
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title"></h5>
+
+                            <!-- TinyMCE Editor -->
+                            <textarea class="tinymce-editor">
+                <p></p>
+                <p> </p>
+              </textarea><!-- End TinyMCE Editor -->
+
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="row mb-12">
+                    <div class="col-sm-10">
+                        <a href="공지사항1더미.html"><button type="button" class="btn btn-primary">등록</button></a>
                     </div>
                 </div>
+                </form><!-- End General Form Elements -->
 
             </div>
-
-            <div class="col-lg-12">
-
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">본문내용</h5>
-
-
-                        <p>SUMMER VACATION</p>
-                        <pre>              &nbsp; &nbsp;   여름 휴가 공지
-
-                    (주) 정감을 아껴주시고 찾아주시는 고객님들께 알려드립니다.
-
-
-
-                    무더운 여름을 맞아 아래와 같은 일정으로 하계휴가를 실시합니다.
-
-                    재충전후 더 좋은 모습으로 찾아뵙겠습니다.</pre>
-
-                    </div>
-                </div>
-
-            </div>
-
-            <div class="row mb-12">
-                <div class="col-sm-10">
-                    <a href="noticemodify"><button type="button" class="btn btn-primary">수정</button></a>
-                    <a href="">  <button type="button" class="btn btn-danger">삭제</button></a>
-                    <a href="공지사항.html"><button type="button" class="btn btn-primary">목록</button></a>
-                </div>
-            </div>
-            </form><!-- End General Form Elements -->
-
-        </div>
         </div>
 
         </div>
 
 
-        </div> <!--End row-->
+        </div>
     </section>
-</main>
-<!-- End #main -->
+
+</main><!-- End #main -->
 <th:block th:replace="~{/fragments/bodyFragment::footer}"></th:block>
 <th:block th:replace="~{/fragments/bodyFragment::js}"></th:block>
 </body>
