--- a/src/main/resources/templates/Notice/noticelist.html
+++ b/src/main/resources/templates/Notice/noticelist.html
@@ -38,15 +38,15 @@
 
 
                         <h7 class="text"> 제목검색</h7>
-
-
-                        <input title="검색" type="text">
-                        &nbsp
+                                <input title="검색" name="keyword" type="text">
+                                &nbsp
                         <button type="button" class="btn btn-primary btn-sm">검색</button>
                         &nbsp
+
                         <a href="noticeregister" class="register">
                             <button type="button" class="btn btn-primary btn-sm">글쓰기</button></a>
                         &nbsp
+
 
                         <!-- Table with hoverable rows -->
                         <table class="table table-hover">
@@ -64,12 +64,22 @@
                                 <td th:text="${notice.noticeWriter}"></td>
                                 <td><a th:href="@{/notice/noticeread/{noticeNumber}(noticeNumber=${notice.noticeNumber})}"
                                        th:text="${notice.noticeTitle}"></a></td>
-                                <td th:text="${#temporals.format(notice.noticeRegDate, 'yyyy-MM-dd HH:mm')}"></td>
+                                <td th:text="${#temporals.format(notice.noticeRegDate, 'yyyy-MM-dd')}"></td>
                             </tr>
                             </tbody>
                         </table>
                         <!-- End Table with hoverable rows -->
-
+                        <!-- Centered Pagination -->
+                        <nav aria-label="Page navigation example">
+                            <ul class="pagination justify-content-center">
+                                <li class="page-item disabled">
+                                    <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Prev</a>
+                                </li>
+                                <li class="page-item">
+                                    <a class="page-link" href="#">Next</a>
+                                </li>
+                            </ul>
+                        </nav><!-- End Centered Pagination -->
                     </div>
                 </div>
 
@@ -109,12 +119,22 @@
                                 <td th:text="${deptnotice.deptNoticeWriter}"></td>
                                 <td><a th:href="@{/deptnotice/deptnoticeread/{deptNoticeNumber}(deptNoticeNumber=${deptnotice.deptNoticeNumber})}"
                                        th:text="${deptnotice.deptNoticeTitle}"></a></td>
-                                <td th:text="${#temporals.format(deptnotice.deptNoticeRegDate, 'yyyy-MM-dd HH:mm')}"></td>
+                                <td th:text="${#temporals.format(deptnotice.deptNoticeRegDate, 'yyyy-MM-dd')}"></td>
                             </tr>
                             </tbody>
                         </table>
                         <!-- End Table with hoverable rows -->
-
+                        <!-- Centered Pagination -->
+                        <nav aria-label="Page navigation example">
+                            <ul class="pagination justify-content-center">
+                                <li class="page-item disabled">
+                                    <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Prev</a>
+                                </li>
+                                <li class="page-item">
+                                    <a class="page-link" href="#">Next</a>
+                                </li>
+                            </ul>
+                        </nav><!-- End Centered Pagination -->
                     </div>
                 </div>
             </div>
