--- a/src/main/resources/templates/Notice/noticeregister.html
+++ b/src/main/resources/templates/Notice/noticeregister.html
@@ -36,43 +36,39 @@
                         <h5 class="card-title">상세보기</h5>
 
                         <!-- General Form Elements -->
-                        <form>
-                            <div class="row mb-3">
-                                <label class="col-sm-2 col-form-label">번호</label>
-                                <div class="col-sm-10">
-                                    <label class="col-sm-2 col-form-label">${notice.noticeNumber}</label>
-                                </div>
-                            </div>
-                            <form>
+                        <form action="noticelist" method="post">
+<!--                            <div class="row mb-3">-->
+<!--                                <label class="col-sm-2 col-form-label">번호</label>-->
+<!--                                <div class="col-sm-10">-->
+<!--                                    <label class="col-sm-2 col-form-label"></label>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                            <form action="noticelist" method="post">-->
                                 <div class="row mb-3">
                                     <label class="col-sm-2 col-form-label">작성자</label>
                                     <div class="col-sm-10">
-                                        <input type="text" class="form-control" value="${notice.noticeWriter}">
+                                        <input type="text" class="form-control" name="noticeWriter">
                                     </div>
                                 </div>
 
                                 <div class="row mb-3">
                                     <label class="col-sm-2 col-form-label">제목</label>
                                     <div class="col-sm-10">
-                                        <input type="text" class="form-control" value="${notice.noticeTitle}">
+                                        <input type="text" class="form-control" name="noticeTitle">
                                     </div>
                                 </div>
                                 <div class="row mb-3">
                                     <label class="col-sm-2 col-form-label">작성일</label>
                                     <div class="col-sm-10">
-                                        <input type="date" class="form-control" value="2024-05-30">
+                                        <input type="date" class="form-control" name="noticeRegDate">
                                     </div>
                                 </div>
-
-
                                 <div class="row mb-3">
                                     <label class="col-sm-2 col-form-label">본문 내용</label>
                                     <!-- End Quill Editor Full -->
 
                                 </div>
-                            </form>
-                                </form
-                                    ></div>>
+                    </div>
 
                 </div>
 
@@ -83,22 +79,20 @@
                             <h5 class="card-title"></h5>
 
                             <!-- TinyMCE Editor -->
-                            <textarea class="tinymce-editor">
-                <p></p>
-                <p> </p>
-              </textarea><!-- End TinyMCE Editor -->
+                            <textarea class="tinymce-editor" name="noticeContent">
+                            </textarea><!-- End TinyMCE Editor -->
 
                         </div>
                     </div>
 
                 </div>
-
+                </form>
                 <div class="row mb-12">
                     <div class="col-sm-10">
-                        <a href="공지사항1더미.html"><button type="button" class="btn btn-primary">등록</button></a>
+                        <a href="noticelist"><button type="button" class="btn btn-primary">등록</button></a>
                     </div>
                 </div>
-                </form><!-- End General Form Elements -->
+                <!-- End General Form Elements -->
 
             </div>
         </div>
