공지사항 작업중 6
목록 검색,페이징 작업중
등록 구현

--- a/src/main/resources/templates/Notice/noticeregister.html
+++ b/src/main/resources/templates/Notice/noticeregister.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>전제공지상세보기</title>
+    <title>공지사항등록</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -33,17 +33,17 @@
 
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">상세보기</h5>
+                        <h5 class="card-title">등록</h5>
 
                         <!-- General Form Elements -->
-                        <form action="noticelist" method="post">
+                        <form action="noticeregister" method="post">
 <!--                            <div class="row mb-3">-->
 <!--                                <label class="col-sm-2 col-form-label">번호</label>-->
 <!--                                <div class="col-sm-10">-->
-<!--                                    <label class="col-sm-2 col-form-label"></label>-->
+<!--                                    <input type="text" class="form-control" name="noticeNumber" >-->
 <!--                                </div>-->
 <!--                            </div>-->
-<!--                            <form action="noticelist" method="post">-->
+
                                 <div class="row mb-3">
                                     <label class="col-sm-2 col-form-label">작성자</label>
                                     <div class="col-sm-10">
@@ -57,41 +57,52 @@
                                         <input type="text" class="form-control" name="noticeTitle">
                                     </div>
                                 </div>
+
                                 <div class="row mb-3">
                                     <label class="col-sm-2 col-form-label">작성일</label>
                                     <div class="col-sm-10">
                                         <input type="date" class="form-control" name="noticeRegDate">
                                     </div>
                                 </div>
+
                                 <div class="row mb-3">
                                     <label class="col-sm-2 col-form-label">본문 내용</label>
-                                    <!-- End Quill Editor Full -->
+                                    <div class="col-lg-12">
 
+                                        <div class="card">
+                                            <div class="card-body">
+                                    <textarea class="tinymce-editor" name="noticeContent"></textarea>
+                                            </div>
+                                        </div>
+
+                                    </div>
                                 </div>
-                    </div>
+                            <div class="col-sm-10">
+                                <button type="submit" class="btn btn-primary">등록</button>
+                            </div>
+                        </form></div>
 
                 </div>
 
-                <div class="col-lg-12">
+<!--                <div class="col-lg-12">-->
 
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title"></h5>
+<!--                    <div class="card">-->
+<!--                        <div class="card-body">-->
+<!--                            <h5 class="card-title"></h5>-->
 
-                            <!-- TinyMCE Editor -->
-                            <textarea class="tinymce-editor" name="noticeContent">
-                            </textarea><!-- End TinyMCE Editor -->
+<!--                            &lt;!&ndash; TinyMCE Editor &ndash;&gt;-->
+<!--                            <textarea class="tinymce-editor" name="noticeContent">-->
+<!--                            </textarea>&lt;!&ndash; End TinyMCE Editor &ndash;&gt;-->
 
-                        </div>
-                    </div>
+<!--                        </div>-->
+<!--                    </div>-->
 
-                </div>
-                </form>
-                <div class="row mb-12">
-                    <div class="col-sm-10">
-                        <a href="noticelist"><button type="button" class="btn btn-primary">등록</button></a>
-                    </div>
-                </div>
+<!--                </div>-->
+<!--                <div class="row mb-12">-->
+<!--                    <div class="col-sm-10">-->
+<!--                        <button type="submit" class="btn btn-primary">등록</button>-->
+<!--                    </div>-->
+<!--                </div>-->
                 <!-- End General Form Elements -->
 
             </div>
