--- a/src/main/resources/templates/deptnotice/deptnoticeregister.html
+++ b/src/main/resources/templates/deptnotice/deptnoticeregister.html
@@ -1,10 +1,121 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+    <title>부서알림공지등록</title>
+    <meta content="" name="description">
+    <meta content="" name="keywords">
+
+    <th:block th:replace="~{/fragments/headFragment}"></th:block>
 </head>
 <body>
+<th:block th:replace="~{/fragments/bodyFragment::header}"></th:block>
+<th:block th:replace="~{/fragments/bodyFragment::sidebar}"></th:block>
+<!-- ======= main ======= -->
+<main id="main" class="main">
+    <div class="pagetitle">
+        <h1>부서알림 공지사항</h1>
+        <nav>
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="index.html">메인</a></li>
+                <li class="breadcrumb-item">공지사항</li>
+            </ol>
+        </nav>
+    </div><!-- End Page Title -->
 
+    <section class="section dashboard">
+        <div class="row">
+            <!--★★★★★★★★★★카드내용★★★★★★★★★★★★-->
+            <!--여기에 카드랑 내용 넣어주시면 됩니다-->
+            <div class="col-lg-12">
+
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">등록</h5>
+
+                        <!-- General Form Elements -->
+                        <form action="deptnoticeregister" method="post">
+                            <!--                            <div class="row mb-3">-->
+                            <!--                                <label class="col-sm-2 col-form-label">번호</label>-->
+                            <!--                                <div class="col-sm-10">-->
+                            <!--                                    <input type="text" class="form-control" name="noticeNumber" >-->
+                            <!--                                </div>-->
+                            <!--                            </div>-->
+
+                            <div class="row mb-3">
+                                <label class="col-sm-2 col-form-label">작성자</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" name="deptNoticeWriter">
+                                </div>
+                            </div>
+
+                            <div class="row mb-3">
+                                <label class="col-sm-2 col-form-label">제목</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" name="deptNoticeTitle">
+                                </div>
+                            </div>
+
+                            <div class="row mb-3">
+                                <label class="col-sm-2 col-form-label">작성일</label>
+                                <div class="col-sm-10">
+                                    <input type="date" class="form-control" name="deptNoticeRegDate">
+                                </div>
+                            </div>
+
+                            <div class="row mb-3">
+                                <label class="col-sm-2 col-form-label">본문 내용</label>
+                                <div class="col-lg-12">
+
+                                    <div class="card">
+                                        <div class="card-body">
+                                            <textarea class="tinymce-editor" name="deptNoticeContent"></textarea>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+                            <div class="col-sm-10">
+                                <button type="submit" class="btn btn-primary">등록</button>
+                            </div>
+                        </form></div>
+
+                </div>
+
+                <!--                <div class="col-lg-12">-->
+
+                <!--                    <div class="card">-->
+                <!--                        <div class="card-body">-->
+                <!--                            <h5 class="card-title"></h5>-->
+
+                <!--                            &lt;!&ndash; TinyMCE Editor &ndash;&gt;-->
+                <!--                            <textarea class="tinymce-editor" name="noticeContent">-->
+                <!--                            </textarea>&lt;!&ndash; End TinyMCE Editor &ndash;&gt;-->
+
+                <!--                        </div>-->
+                <!--                    </div>-->
+
+                <!--                </div>-->
+                <!--                <div class="row mb-12">-->
+                <!--                    <div class="col-sm-10">-->
+                <!--                        <button type="submit" class="btn btn-primary">등록</button>-->
+                <!--                    </div>-->
+                <!--                </div>-->
+                <!-- End General Form Elements -->
+
+            </div>
+        </div>
+
+        </div>
+
+
+        </div>
+    </section>
+
+</main><!-- End #main -->
+<th:block th:replace="~{/fragments/bodyFragment::footer}"></th:block>
+<th:block th:replace="~{/fragments/bodyFragment::js}"></th:block>
 </body>
 </html>
