--- a/src/main/resources/templates/Notice/noticeread.html
+++ b/src/main/resources/templates/Notice/noticeread.html
@@ -21,7 +21,7 @@
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="index.html">메인</a></li>
                 <li class="breadcrumb-item">공지사항</li>
-                <li class="breadcrumb-item">※ 여름휴가공지 ※</li>
+                <li class="breadcrumb-item" th:text="${notice.noticeTitle}"></li>
             </ol>
         </nav>
     </div><!-- End Page Title -->
@@ -37,31 +37,31 @@
                         <h5 class="card-title">상세보기</h5>
 
                         <!-- General Form Elements -->
-                        <form>
+<!--                        <form>-->
                             <div class="row mb-3">
                                 <label class="col-sm-2 col-form-label">번호</label>
                                 <div class="col-sm-10">
-                                    <label class="col-sm-2 col-form-label">1</label>
+                                    <label class="col-sm-2 col-form-label" th:text="${notice.noticeNumber}"></label>
                                 </div>
                             </div>
-                            <form>
+<!--                            <form>-->
                                 <div class="row mb-3">
                                     <label class="col-sm-2 col-form-label">작성자</label>
                                     <div class="col-sm-10">
-                                        <label class="col-sm-2 col-form-label">관리자</label>
+                                        <label class="col-sm-2 col-form-label" th:text="${notice.noticeWriter}"></label>
                                     </div>
                                 </div>
 
                                 <div class="row mb-3">
                                     <label class="col-sm-2 col-form-label">제목</label>
                                     <div class="col-sm-10">
-                                        <label class="col-sm-2 col-form-label" th:text="{noticeDTO.noticeTitle}"></label>
+                                        <label class="col-sm-2 col-form-label" th:text="${notice.noticeTitle}"></label>
                                     </div>
                                 </div>
                                 <div class="row mb-3">
                                     <label class="col-sm-2 col-form-label">작성일</label>
                                     <div class="col-sm-10">
-                                        <label class="col-sm-2 col-form-label">2024-07-22</label>
+                                        <label class="col-sm-2 col-form-label" th:text="${notice.noticeRegDate}"></label>
                                     </div>
                                 </div>
 
@@ -81,16 +81,7 @@
                         <h5 class="card-title">본문내용</h5>
 
 
-                        <p>SUMMER VACATION</p>
-                        <pre>              &nbsp; &nbsp;   여름 휴가 공지
-
-                    (주) 정감을 아껴주시고 찾아주시는 고객님들께 알려드립니다.
-
-
-
-                    무더운 여름을 맞아 아래와 같은 일정으로 하계휴가를 실시합니다.
-
-                    재충전후 더 좋은 모습으로 찾아뵙겠습니다.</pre>
+                        <p th:text="${notice.noticeContent}"></p>
 
                     </div>
                 </div>
